--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,61 @@
-@layer theme, base, components, utilities;
-@import "tailwindcss/theme.css" layer(theme);
-@import "tailwindcss/utilities.css" layer(utilities);
-
-@import "tw-animate-css";
-
 @config '../tailwind.config.js';
+
+.teleicu-devices-container {
+  @import "tailwindcss";
+
+  .tooltip {
+    @apply relative;
+  }
+
+  .tooltip .tooltip-text {
+    visibility: hidden;
+    opacity: 0;
+    @apply bg-black/75 backdrop-blur text-white text-center p-2 rounded absolute z-50 text-sm block transition-opacity whitespace-nowrap pointer-events-none;
+  }
+
+  .tooltip .tooltip-left {
+    transform: translateX(20px);
+  }
+
+  .tooltip .tooltip-right {
+    transform: translateX(-20px);
+  }
+
+  .tooltip .tooltip-top {
+    transform: translateY(20px);
+  }
+
+  .tooltip .tooltip-bottom {
+    transform: translateY(-20px);
+  }
+
+  .tooltip .tooltip-right {
+    top: 20%;
+    left: calc(100% + 10px);
+  }
+
+  .tooltip .tooltip-top {
+    bottom: 100%;
+    left: 50%;
+  }
+
+  .tooltip .tooltip-bottom {
+    top: 100%;
+    left: 50%;
+  }
+
+  .tooltip .tooltip-left {
+    top: -5px;
+    right: calc(100% + 10px);
+  }
+
+  .tooltip:hover .tooltip-text {
+    visibility: visible;
+    opacity: 100;
+    transform: translateX(0px);
+    transform: translateY(0px);
+  }
+}
 
 /*
   The default border color has changed to `currentColor` in Tailwind CSS v4,
@@ -22,57 +73,4 @@
   ::file-selector-button {
     border-color: var(--color-gray-200, currentColor);
   }
-}
-
-.tooltip {
-  @apply relative;
-}
-
-.tooltip .tooltip-text {
-  visibility: hidden;
-  opacity: 0;
-  @apply bg-black/75 backdrop-blur text-white text-center p-2 rounded absolute z-50 text-sm block transition-opacity whitespace-nowrap pointer-events-none;
-}
-
-.tooltip .tooltip-left {
-  transform: translateX(20px);
-}
-
-.tooltip .tooltip-right {
-  transform: translateX(-20px);
-}
-
-.tooltip .tooltip-top {
-  transform: translateY(20px);
-}
-
-.tooltip .tooltip-bottom {
-  transform: translateY(-20px);
-}
-
-.tooltip .tooltip-right {
-  top: 20%;
-  left: calc(100% + 10px);
-}
-
-.tooltip .tooltip-top {
-  bottom: 100%;
-  left: 50%;
-}
-
-.tooltip .tooltip-bottom {
-  top: 100%;
-  left: 50%;
-}
-
-.tooltip .tooltip-left {
-  top: -5px;
-  right: calc(100% + 10px);
-}
-
-.tooltip:hover .tooltip-text {
-  visibility: visible;
-  opacity: 100;
-  transform: translateX(0px);
-  transform: translateY(0px);
 }
